change in about link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us</title>
+  <title>About Us | Welcome to ai scholars</title>
   <link rel="stylesheet" href="./css/aistyle.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -15,7 +15,7 @@
       <div class="imag"> <img src="./image/logo_dark (1).webp" alt=""></div>
       <div class="nav" style="display: flex; justify-items: center;">
         <div class="nav-item">
-          <li> <a href="https://www.aischolars.in/about">About</a></li>
+          <li> <a href="#about">About</a></li>
           <li> <a href="#home"> Home</a></li>
           <li> <a href="#about us">About</a> </li>
           <li> <a href="#services">Services</a></li>
