change logo name

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="head">
-      <div class="imag"> <img src="./image/logo_dark (1).webp" alt=""></div>
+      <div class="imag"> <img src="./image/logo_dark.webp" alt=""></div>
       <div class="nav" style="display: flex; justify-items: center;">
         <div class="nav-item">
           <li> <a href="#about">About</a></li>
